--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,8 @@ a {
 
 img {
   object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 img#logo {
@@ -26,7 +28,7 @@ nav a.nav-link.active {
 }
 
 .hero #carouselExampleFade .carousel-inner {
-  max-height: 600px;
+  height: 600px;
 }
 
 .build {
@@ -72,6 +74,10 @@ footer {
 }
 
 @media (max-width: 425px) {
+  .hero #carouselExampleFade .carousel-inner {
+    height: 300px;
+  }
+
   #map iframe {
     height: 300px;
   }
